@@ -1,5 +1,5 @@
 #!/usr/local/bin/perl
-# Copyright (C) 2003 - 2009 GraphicsMagick Group
+# Copyright (C) 2003 - 2016 GraphicsMagick Group
 # Copyright (C) 2002 ImageMagick Studio
 # Copyright (C) 1991-1999 E. I. du Pont de Nemours and Company
 #
@@ -13,7 +13,7 @@
 # Whenever a new test is added/removed, be sure to update the
 # 1..n ouput.
 #
-BEGIN { $| = 1; $test=1; print "1..77\n"; }
+BEGIN { $| = 1; $test=1; print "TAP version 13\n1..77\n"; }
 END {print "not ok $test\n" unless $loaded;}
 use Graphics::Magick;
 $loaded=1;
@@ -142,6 +142,10 @@ print("MAT (MatLab RGB 8-bit LSB integer) ...\n");
 ++$test;
 testReadCompare('input_rgb_lsb_08bit.mat', 'reference/read/input_rgb_lsb_08bit_mat.miff', q//, 0, 0);
 
+#print("MAT (MatLab V4 gray 64-bit LSB double) ...\n");
+#++$test;
+#testReadCompare('input_gray_lsb_double_v4.mat', 'reference/read/input_gray_lsb_double_v4_mat.miff', q//, 0.002, 0.004);
+
 print("Microsoft icon ...\n");
 ++$test;
 testReadCompare('input.ico', 'reference/read/input_ico.miff', q//, 0, 0);
@@ -221,7 +225,11 @@ testReadCompare('input_p6.ppm', 'reference/read/input_ppm_p6.miff', q//, 0, 0);
 
 print("Adobe Photoshop bitmap file ...\n");
 ++$test;
-testReadCompare('input.psd', 'reference/read/input_psd.miff', q//, 0, 0);
+if (featureSupported("PSD")) {
+    testReadCompare('input.psd', 'reference/read/input_psd.miff', q//, 0, 0);
+} else {
+    print "ok $test # skip PSD not supported\n";
+}
 
 print("Irix RGB image file ...\n");
 ++$test;
