@@ -38,6 +38,9 @@
 <p>2016-04-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>PerlMagick/t/features.pl.in: Provide a way that PerlMagick
+feature tests can test if a feature is supported.  Use it to make
+the PSD test optional.</li>
 <li>coders/Makefile.am: Only build PSD module if
 ENABLE_BROKEN_CODERS is enabled.</li>
 <li>magick/module.c (UnloadModule): Only invoke the module
